# neatpush

./: .cruft.json  .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  Makefile  README.md  alembic.ini  changelog.html  docker-compose.yaml  index.html  mkdocs.yml  pyproject.toml  reference.html  sitemap.xml
.github/workflows/: ci.yml  smokeshow.yml
dbschema/: default.esdl
dbschema/migrations/: 00001.edgeql  00002.edgeql  00003.edgeql  00004.edgeql  00005.edgeql  00006.edgeql  00007.edgeql
deploy/: k8s.yaml
k8s/: README.md  edgedb.yaml  kustomization.yaml  redis.yaml  worker.yaml
neatpush/: __init__.py  __main__.py  app.py  clients.py  config.py  constant.py  edbqueries.py  manga.py  models.py  neatmanga.py  notify.py  queries.edgeql  s3.py  scraping.py  tasks.py
neatpush/migrations/: env.py
neatpush/migrations/versions/: aa0ce1324fa4_initial_migration.py
neatpush/queries/: upsert_chapter.edgeql
prisma/: schema.prisma
prisma/migrations/20220716081404_initial_model/: migration.sql
requirements/: requirements-prod.txt
search/: search_index.json
tests/: conftest.py  test_clients.py  test_neatmanga.py  test_orchestration.py  test_scraping.py
tests/data/vcr_cassettes/: neatmanga_latest_releases_berserk  neatmanga_latest_releases_berserk.yaml  orchestration.yaml  scrap_tales-of-demons-and-gods.yaml
