[build-system]
requires = ["hatchling>=1.5.0"]
build-backend = "hatchling.build"

[tool.hatch]
version = { path = 'neatpush/__init__.py' }

[project]
name = "neatpush"
authors = [{ name = "Guillaume Jeusel", email = "jeusel.guillaume@gmail.com" }]
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
]
requires-python = "==3.10.*"
dynamic = ["version"]

dependencies = [
  'typer',
  'uvloop',
  'pydantic[dotenv]',

  # scraping:
  'httpx',
  'gazpacho',   # html parsing - easier than beautiful soup
  'dateparser', # parse human readable dates

  # task queue:
  'arq==0.24',
  'aioredis==2.0.1',
  'orjson',
  'watchgod',        # watch file change for arq

  # logs:
  'structlog',
  'rich',      # add exceptions ftm to structlog

  # edgedb:
  'edgedb==0.24.0',        # not yet available, in the meantime:
  'edgeql-queries==0.4.0', # https://github.com/nsidnev/edgeql-queries
]

optional-dependencies = { qa = [
  'flake8',
  'flake8-bugbear',
  'flake8-builtins',
  'black',
  'isort',
  'pre-commit',
], test = [
  'coverage>=5.0.3',
  'pytest',
  'pytest-asyncio',
  'vcrpy',
] }

[project.urls]
Homepage = 'https://github.com/gjeusel/neatpush'
Source = 'https://github.com/gjeusel/neatpush'


[project.scripts]
neatpush = "neatpush.__main__:cli"

[tool.isort]
line_length = 88
profile = 'black'

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
(
  /(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | htmlcov
    | build
  )/
)
'''

[tool.pyright]
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false
reportIncompatibleVariableOverride = false # class Config in pydantic
reportPrivateImportUsage = false           # arq.ArqRedis (not in __all__)

[tool.pytest.ini_options]
asyncio_mode = 'auto'
